<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/sign_up_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="10dp">

    <TextView
        android:id="@+id/add_item_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_new_item"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/add_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item_txt"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_divider_top_bottom_right_left"
        android:hint="@string/add_item_name_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/add_item_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item_name"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_divider_top_bottom_right_left"
        android:hint="@string/add_item_desc_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/add_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item_desc"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_divider_top_bottom_right_left"
        android:hint="@string/add_item_price_hint"
        android:inputType="number|numberDecimal"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/add_item_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item_price"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_divider_top_bottom_right_left"
        android:hint="@string/add_item_duration_hint"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

</RelativeLayout>