<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/sign_in_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="10dp">

    <TextView
        android:id="@+id/sign_in_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_txt"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_divider_top_bottom_right_left"
        android:hint="@string/sign_in_email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/sign_in_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_email"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_divider_top_bottom_right_left"
        android:hint="@string/sign_in_pass_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

</RelativeLayout>