<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.crossover.auctilion.MainActivity">

    <RelativeLayout
        android:id="@+id/main_sign_in_up_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/main_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="42sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/main_sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/main_name_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/main_sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/main_sign_in_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold"/>
    </RelativeLayout>





</RelativeLayout>
